'/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/
@startuml ClassDiagram_overview

package "manager/authentication-manager" {

  package manager::authentication {
    class Authentication {
      +{static} auth_user(const boost::property_tree::ptree& params) : ErrorCode
      +{static} auth_user(std::string_view conninfo) : ErrorCode
    }
    hide Authentication empty fields
  }

  package manager::authentication::db {
    class AuthenticationProvider {
      +{static} auth_user(const boost::property_tree::ptree& params) : ErrorCode
      +{static} auth_user(std::string_view conninfo) : ErrorCode
    }
    hide AuthenticationProvider empty fields

    namespace manager::authentication::db::postgresql {
      class DBSessionManager {
      +{static} attempt_connection(const boost::property_tree::ptree &params) : ErrorCode
      }
      hide DBSessionManager empty fields

      .AuthenticationProvider --> DBSessionManager
    }
  }

  Authentication --> AuthenticationProvider
}

package "PostgreSQL" <<Database>> {
  hide empty members
}

manager::authentication::db::postgresql.DBSessionManager .right.> PostgreSQL
note on link #White
PQping()
PQconnectdb()
end note

@enduml
